src/testFunctional/testData/org/intellij/xquery/annotator/xml/Unresolved.xq
<<error descr="Cannot resolve namespace 'html'">html</error>:p>text</<error descr="Cannot resolve namespace 'html'">html</error>:p>